crates/vexor-compiler/tests/golden/error/output/unknown_operator.err
Error: parse error
   ╭─[ input:2:12 ]
   │
 2 │ val x = 10 ~ 3
   │            ┬  
   │            ╰── invalid character
───╯
